# fastzdp_sqlmodel

./: .gitignore  README.md  pyproject.toml
examples/c01_sqlmodel_official/: c01_create_table.py  c02_add.py  c03_find_first.py  c04_find_list.py  c05_find_all.py  c06_where_and.py  c07_where_or.py  c08_index.py  c09_where_id_first.py  c10_get_id.py  c11_offset_limit.py  c12_update.py  c13_delete.py
examples/c02_fastzdp_sqlmodel_official/: c01_create_table.py  c02_add.py  c03_get_all.py  c04_get_by_dict.py  c05_get_by_dict_or.py  c06_get_by_dict_and.py  c07_get.py  c08_update.py  c09_update_id.py  c10_delete.py  c11_delete_id.py  c12_get_page.py  c13_get_first.py  c14_is_exists.py
examples/c03_teach_20240918/: c02_model.py  c03_create_table.py  c04_add.py  c05_add.py  c06_find_name.py  c07_find_all.py  c08_find_and.py  c09_find_or.py  c10_get.py  c11_page.py  c12_update.py  c13_delete.py
examples/c04_fastzdp_sqlmodel_teach_20240919/: c01_model.py  c02_add_table.py  c03_init_table.py  c04_add.py  c05_get_all.py  c06_get_by_dict.py  c07_get_by_dict_or.py  c08_get_by_dict_and.py  c09_get.py  c10_update.py  c11_update_id.py  c12_delete.py  c13_delete_id.py  c14_get_page.py  c15_get_first.py  c16_is_exists.py
examples/c05_course_manager_20240919/: c01_model.py  c02_classes_add.py  c03_classes_get_all.py  c04_classes_update.py  c05_classes_delete.py  c06_course_add.py  c07_course_update.py  c08_course_get_classes.py  c09_course_video.py  (+6 more)
fastzdp_sqlmodel/: __init__.py  add.py  delete.py  engine.py  get.py  get_analysis.py  get_page.py  is_bool.py  table.py  update.py
