[tool.poetry]
name = "fastzdp-sqlmodel"
version = "0.1.3"
description = "基于SQLModel封装的专用于FastAPI处理MySQL数据库业务的框架"
authors = ["zhangdapeng520 <1156956636@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.22"
pymysql = "^1.1.1"
cryptography = "^43.0.1"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
